--- a/Develop/package.json
+++ b/Develop/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
+    "insomnia": "^0.0.1",
     "mysql2": "^2.3.3",
     "sequelize": "^5.22.5"
   }
